# antel

./: .ansible-lint  .gitignore  .yamllint  CLAUDE.md  README.md  ansible.cfg  pyproject.toml  workshop.yaml
.claude/: settings.json
.claude/skills/use-workshop/: ATTRIBUTION.md  SKILL.md
.claude/skills/use-workshop/references/: anti-patterns.md  async-and-recovery.md  command-cheatsheet.md  concepts.md  definition-file.md  in-project-sdk.md  interfaces.md  sdk-types.md  states-and-transitions.md
.claude/skills/use-workshop/workflows/: author-in-project-sdk.md  bootstrap-project.md  customize-actions.md  daily-ops.md  manage-interfaces.md  multi-workshop-projects.md  parallel-environments.md  purge-and-recover.md  troubleshoot.md
.devcontainer/: README.md  devcontainer.json  podman-wrapper
collections/: requirements.yml
docs/: collector-multi-backend.md  otel-production-setup.md
grafana/provisioning/datasources/: jaeger.yaml
inventories/production/: hosts.yml
inventories/staging/: hosts.yml
molecule/default/: converge.yml  molecule.yml
molecule/poller/: converge.yml  molecule.yml  verify.yml
observability/: compose.yaml
observability/grafana/provisioning/datasources/: jaeger.yaml  tempo.yaml
observability/tempo/: tempo.yaml
playbooks/: site.yml
roles/centreon_poller/defaults/: main.yml
roles/centreon_poller/meta/: main.yml
roles/centreon_poller/tasks/: install.yml  main.yml  prerequisites.yml  repository.yml  services.yml
